# obsidian

./: ABOUT  CMakeLists.txt  INSTALL  LICENSE  TODO
doc/: obsidian-documentation-0.1.tex
extras/: init_script  watchdog
src/: obsidian.c  obsidian.h
src/conf/: obsidian.conf
src/lib/: common.h  config.c  config.h  config.h.orig  crypto.c  crypto.h  dennis.c  dennis.h  dexp.c  dexp.h  filter.c  filter.h  fsevents.c  fsevents.h  logger.c  logger.h  network.c  network.h  peer.h  statinfos.h  utils.c  utils.h
src/tools/: obsidian-mkcert
